# simple_robot_motion_model

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: custom_diff_drive.yaml
controller_template_extern/: DifferentialDriveMotionModelTemplate.slx  DifferentialDriveMotionModelTemplate_2020a.slx  DifferentialDriveMotionModelTemplate_2020b.slx  DifferentialDriveMotionModelTemplate_2021a.slx
launch/: simple_robot_motion_model.launch
urdf/: simple_robot_motion_model.gazebo  simple_robot_motion_model.xacro
