<?xml version="1.0"?>
<package>
  <name>simple_robot_motion_model</name>
  <version>0.0.1</version>
  <description>
    This ROS package provides a simple starting point for a mobile robotics course.  It is so developed, that the students can continually improve varying points of the package as their knowledge increases.
    Here the emphasis is on a extracting information about the movement of the robot through a small Simulink Model and subsequent data analysis.
  </description>
  
  <maintainer email="gavin.kane@hs-emden-leer.de">Gavin Kane</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>controller_manager</run_depend>
</package>
